# polars-ad-etl

./: .gitignore  README.md  apsl_2025-07-01–2025-08-06.csv  main.py  pyproject.toml
scripts/: apsl_daily.py  apsl_daily_v2.py  apsl_internal.py  kcon_region.py  like_eat.py  manaboo_daily.py  podl_daily.py  tmx_daily.py
scripts/legacy/: kcon_region.py
src/google_cloud_client/: google_cloud_client.py
src/multi_source_ad_etl/: data_clean_lib.py  multi_source_ad_etl.py
src/plETL/: apslETL.py
src/utils/: utils.py
